--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,28 @@
-.App {
-  text-align: center;
-}
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.container {
+  background-color: black;
   color: white;
+  font-family: 'Roboto Mono', monospace;
+  min-height: 100vh;
+  min-width: 100vw;
+}
+.container > div {
+  padding: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+/* Heading file stylings */
+h1 {
+  margin: 0;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.countComment, .countComment > div {
+  display: flex;
+  align-items: center;
+}
+.countComment > div {
+  margin-left: 30px;
+  width: fit-content;
+}
+.icon {
+  filter: invert(100%) sepia(0%) saturate(7500%) hue-rotate(284deg) brightness(100%) contrast(105%);
 }
