--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
 
+* {
+  padding: 0;
+  margin: 0;
+  font-family: 'Roboto Mono', monospace;
+  color: white;
+}
 .container {
   background-color: black;
-  color: white;
-  font-family: 'Roboto Mono', monospace;
   min-height: 100vh;
   min-width: 100vw;
 }
@@ -25,4 +29,56 @@ h1 {
 }
 .icon {
   filter: invert(100%) sepia(0%) saturate(7500%) hue-rotate(284deg) brightness(100%) contrast(105%);
+}
+
+/* Comment */
+form, .commentLine {
+  width: 30%;
+  min-width: 300px;
+}
+.commentLine {
+  border-bottom: 1px solid rgb(88, 88, 88);
+  padding-bottom: 10px;
+  font-size: 1em;
+  cursor: text;
+}
+input.commentLine {
+  border: none;
+  border-bottom: 1px solid rgb(88, 88, 88);
+  background-color: transparent;
+  width: 100%;
+}
+input.commentLine:focus-visible {
+  outline: none;
+  border-bottom: 1px solid white;
+}
+.buttonGroup {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 16px;
+}
+.cancel, .comment {
+  cursor: pointer;
+  padding: 5px 15px;
+  border-radius: 20px;
+  border: none;
+  font-weight: 500;
+}
+.cancel {
+  background-color: transparent;
+  margin-right: 10px;
+}
+.cancel:hover {
+  background-color: gray;
+}
+.disable {
+  color: gray;
+  background-color: rgb(37, 37, 37);
+}
+.enable {
+  color: black;
+  background-color: rgb(63, 152, 224);
+}
+.enable:hover {
+  background-color: rgb(116, 190, 252);
 }
