--- a/src/App.css
+++ b/src/App.css
@@ -31,7 +31,7 @@ h1 {
   filter: invert(100%) sepia(0%) saturate(7500%) hue-rotate(284deg) brightness(100%) contrast(105%);
 }
 
-/* Comment */
+/* Comment Form */
 form, .commentLine {
   width: 30%;
   min-width: 300px;
@@ -57,7 +57,7 @@ input.commentLine:focus-visible {
   justify-content: flex-end;
   margin-top: 16px;
 }
-.cancel, .comment {
+.cancel, .commentButton {
   cursor: pointer;
   padding: 5px 15px;
   border-radius: 20px;
@@ -81,4 +81,9 @@ input.commentLine:focus-visible {
 }
 .enable:hover {
   background-color: rgb(116, 190, 252);
+}
+
+/* Comments Box */
+.commentBox {
+  padding: 10px 0;
 }
